--- a/srvr.au.css
+++ b/srvr.au.css
@@ -11,6 +11,7 @@ div{padding:0;margin:0;}
 
 /* Mobile first */
 canvas,iframe,img,input,select,svg,textarea,video{max-width:100%;max-height:100%;overflow-y:auto;object-fit:contain;}
+.video {aspect-ratio: 16 / 9;width: 100%;}
 img{display:block;}
 header{overflow:hidden;}
 
